raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
typedef struct Matrix
{
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image
{
    void *data;  
    int width;   
    int height;  
    int mipmaps; 
    int format;  
} Image;
typedef struct Texture2D
{
    unsigned int id; 
    int width;       
    int height;      
    int mipmaps;     
    int format;      
} Texture2D;
typedef struct NPatchInfo
{
    Rectangle sourceRec; 
    int left;            
    int top;             
    int right;           
    int bottom;          
    int type;            
} NPatchInfo;
typedef struct CharInfo
{
    int value;           
    Rectangle rec;       
    int offsetX;         
    int offsetY;         
    int advanceX;        
    unsigned char *data; 
} CharInfo;
typedef struct Font
{
    Texture2D texture; 
    int baseSize;      
    int charsCount;    
    CharInfo *chars;   
} Font;
typedef struct BoundingBox
{
    Vector3 min; 
    Vector3 max; 
} BoundingBox;
typedef struct Mesh
{
    int vertexCount;   
    int triangleCount; 
    float *vertices;         
    float *texcoords;        
    float *texcoords2;       
    float *normals;          
    float *tangents;         
    unsigned char *colors;   
    unsigned short *indices; 
    float *baseVertices; 
    float *baseNormals;  
    float *weightBias;   
    int *weightId;       
    unsigned int vaoId;    
    unsigned int vboId[7]; 
} Mesh;
typedef struct Shader
{
    unsigned int id;                
    int locs[MAX_SHADER_LOCATIONS]; 
} Shader;
typedef struct MaterialMap
{
    Texture2D texture; 
    Color color;       
    float value;       
} MaterialMap;
typedef struct Material
{
    Shader shader;                       
    MaterialMap maps[MAX_MATERIAL_MAPS]; 
    float *params;                       
} Material;
typedef struct Model
{
    Mesh mesh;         
    Matrix transform;  
    Material material; 
} Model;
typedef struct Ray
{
    Vector3 position;  
    Vector3 direction; 
} Ray;
    RLAPI void DrawTextureNPatch(Texture2D texture, NPatchInfo nPatchInfo, Rectangle destRec, Vector2 origin, float rotation, Color tint); 
    RLAPI Font GetFontDefault(void);                                                                            
    RLAPI Font LoadFont(const char *fileName);                                                                  
    RLAPI Font LoadFontEx(const char *fileName, int fontSize, int *fontChars, int charsCount);                  
    RLAPI Font LoadFontFromImage(Image image, Color key, int firstChar);                                        
    RLAPI CharInfo *LoadFontData(const char *fileName, int fontSize, int *fontChars, int charsCount, int type); 
    RLAPI Image GenImageFontAtlas(CharInfo *chars, int charsCount, int fontSize, int padding, int packMethod);  
    RLAPI void UnloadFont(Font font);                                                                           
    RLAPI void DrawFPS(int posX, int posY);                                                                                       
    RLAPI void DrawText(const char *text, int posX, int posY, int fontSize, Color color);                                         
    RLAPI void DrawTextEx(Font font, const char *text, Vector2 position, float fontSize, float spacing, Color tint);              
    RLAPI void DrawTextRec(Font font, const char *text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint); 
    RLAPI int MeasureText(const char *text, int fontSize);                                   
    RLAPI Vector2 MeasureTextEx(Font font, const char *text, float fontSize, float spacing); 
    RLAPI int GetGlyphIndex(Font font, int character);                                       
    RLAPI bool TextIsEqual(const char *text1, const char *text2);                        
    RLAPI unsigned int TextLength(const char *text);                                     
    RLAPI const char *TextFormat(const char *text, ...);                                 
    RLAPI const char *TextSubtext(const char *text, int position, int length);           
    RLAPI const char *TextReplace(char *text, const char *replace, const char *by);      
    RLAPI const char *TextInsert(const char *text, const char *insert, int position);    
    RLAPI const char *TextJoin(const char **textList, int count, const char *delimiter); 
    RLAPI const char **TextSplit(const char *text, char delimiter, int *count);          
    RLAPI void TextAppend(char *text, const char *append, int *position);                
    RLAPI int TextFindIndex(const char *text, const char *find);                         
    RLAPI const char *TextToUpper(const char *text);                                     
    RLAPI const char *TextToLower(const char *text);                                     
    RLAPI const char *TextToPascal(const char *text);                                    
    RLAPI void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                                       
    RLAPI void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color);              
    RLAPI void DrawCube(Vector3 position, float width, float height, float length, Color color);                                
    RLAPI void DrawCubeV(Vector3 position, Vector3 size, Color color);                                                          
    RLAPI void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);                           
    RLAPI void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color);      
    RLAPI void DrawSphere(Vector3 centerPos, float radius, Color color);                                                        
    RLAPI void DrawSphereEx(Vector3 centerPos, float radius, int rings, int slices, Color color);                               
    RLAPI void DrawSphereWires(Vector3 centerPos, float radius, int rings, int slices, Color color);                            
    RLAPI void DrawCylinder(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color);      
    RLAPI void DrawCylinderWires(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
    RLAPI void DrawPlane(Vector3 centerPos, Vector2 size, Color color);                                                         
    RLAPI void DrawRay(Ray ray, Color color);                                                                                   
    RLAPI void DrawGrid(int slices, float spacing);                                                                             
    RLAPI void DrawGizmo(Vector3 position);                                                                                     
    RLAPI Model LoadModel(const char *fileName); 
    RLAPI Model LoadModelFromMesh(Mesh mesh);    
    RLAPI void UnloadModel(Model model);         
    RLAPI Mesh LoadMesh(const char *fileName);              
    RLAPI void UnloadMesh(Mesh *mesh);                      
    RLAPI void ExportMesh(Mesh mesh, const char *fileName); 
    RLAPI BoundingBox MeshBoundingBox(Mesh mesh); 
    RLAPI void MeshTangents(Mesh *mesh);          
    RLAPI void MeshBinormals(Mesh *mesh);         
    RLAPI Mesh GenMeshPoly(int sides, float radius);                          
    RLAPI Mesh GenMeshPlane(float width, float length, int resX, int resZ);   
    RLAPI Mesh GenMeshCube(float width, float height, float length);          
    RLAPI Mesh GenMeshSphere(float radius, int rings, int slices);            
    RLAPI Mesh GenMeshHemiSphere(float radius, int rings, int slices);        
    RLAPI Mesh GenMeshCylinder(float radius, float height, int slices);       
    RLAPI Mesh GenMeshTorus(float radius, float size, int radSeg, int sides); 
    RLAPI Mesh GenMeshKnot(float radius, float size, int radSeg, int sides);  
    RLAPI Mesh GenMeshHeightmap(Image heightmap, Vector3 size);               
    RLAPI Mesh GenMeshCubicmap(Image cubicmap, Vector3 cubeSize);             
    RLAPI Material LoadMaterial(const char *fileName); 
    RLAPI Material LoadMaterialDefault(void);          
    RLAPI void UnloadMaterial(Material material);      
    RLAPI void DrawModel(Model model, Vector3 position, float scale, Color tint);                                                     
    RLAPI void DrawModelEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint);      
    RLAPI void DrawModelWires(Model model, Vector3 position, float scale, Color tint);                                                
    RLAPI void DrawModelWiresEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
    RLAPI void DrawBoundingBox(BoundingBox box, Color color);                                                                         